hphp/hack/test/typecheck/object_not_subtype_of_class.php.exp
File "object_not_subtype_of_class.php", line 7, characters 10-17:
Invalid return type (Typing[4110])
File "object_not_subtype_of_class.php", line 6, characters 36-36:
This is an object of type C
File "object_not_subtype_of_class.php", line 7, characters 14-15:
It is incompatible with an object; this class name is unknown to Hack
